--- a/firstfeedback.html
+++ b/firstfeedback.html
@@ -1,45 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
-    <link rel="stylesheet" href="main.css">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Welcome</title>
+  <link rel="stylesheet" href="main.css">
 </head>
-<body>
-    <div class="navbar">
-        <div class="dropdown">
-          <button class="dropbtn">Pages: 
-            <i class="fa fa-caret-down"></i>
-          </button>
-          <div class="dropdown-content">
-            <a href="index.html">Home</a>
-            <a href="profile.html">About Me</a>
-            <a href="faq.html">FAQ</a>
-            <a href="blog.html">Blog</a>
-            <a href="dashboard.html">Dashboard</a>
-          </div>
-        </div> 
 
-        <div class="dropdown">
-          <button class="dropbtnusefulltools">Useful Tools:
-            <i class="fa fa-caret-down"></i>
-          </button>
-          <div class="dropdown-usefulltools">
-            <a href="https://oer.hz.nl/6978cdea-fb31-430b-9bf9-63206aa07754">Course and Examination Regulations</a>
-            <a href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/TWE/IR-B-HBO-ICT-full-time-2023-2024-DEF.pdf">Implementation Regulations</a>
-            <a href="https://glaze-donut-5a5.notion.site/Assignment-Specification-661c5ac5d7494328a58be61d00dd41e4#e1305df5024f4fa2bab3720976a030f3">Notion</a>
-            <a href="https://hz.osiris-student.nl/voortgang">MyHZ study progress</a>
-            <a href="https://github.com/HZ-HBO-ICT">GitHub environment of the study program</a>
-          </div>
-        </div> 
+<!-- de dropdown menu boven aan het scherm om naar andere pagina's van mijn website te gaan. -->
+<body>
+  <div class="navbar">
+    <div class="dropdown">
+      <button class="dropbtn">Pages:
+      <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="index.html">Home</a>
+        <a href="profile.html">About Me</a>
+        <a href="faq.html">FAQ</a>
+        <a href="blog.html">Blog</a>
+        <a href="dashboard.html">Dashboard</a>
       </div>
-    <h1 class="swottext"> First Feedback </h1>
-    <table style="width:13%">
-        <tr>
-            <th class="ict"><a href="blog.html">go back to Blog Feed </a></th>
-        </tr>
-      </table>  
+    </div>
+
+    <!-- Het dropdown menu boven aan het scherm voor de usefull tools. -->
+    <div class="dropdown">
+      <button class="dropbtnusefulltools">Useful Tools:
+      <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-usefulltools">
+        <a href="https://oer.hz.nl/6978cdea-fb31-430b-9bf9-63206aa07754">Course and Examination Regulations</a>
+        <a href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/TWE/IR-B-HBO-ICT-full-time-2023-2024-DEF.pdf">Implementation Regulations</a>
+        <a href="https://glaze-donut-5a5.notion.site/Assignment-Specification-661c5ac5d7494328a58be61d00dd41e4#e1305df5024f4fa2bab3720976a030f3">Notion</a>
+        <a href="https://hz.osiris-student.nl/voortgang">MyHZ study progress</a>
+        <a href="https://github.com/HZ-HBO-ICT">GitHub environment of the study program</a>
+      </div>
+    </div>
+  </div>
+
+  <h1 class="swottext"> First Feedback </h1>
+  <table style="width:13%">
+    <tr>
+      <th class="ict"><a class="bloglink" href="blog.html">go back to Blog Feed </a></th>
+    </tr>
+  </table>
+
+  <table>
+    <tr>
+      <th class="faq">
+        Welcome on the page of my first feedback. Here I will<br>
+        explain what kind of feedback I received and how Implemated It.<br>
+        The first person who came to me to give me feedback was Hugo A.K.A my Studie Career Coach (SCC).<br>
+        He was super friendly and gave me lots of compliments such as:<br>
+        "you used nice colors" or "the menu Is super nice." But he also gave me usefull<br>
+        advice like: "Make sure u are aware how you use your spacing" <br>
+        and "Be aware that your logo Is't too big". I also got feedback<br>
+        from Polly(teacher assistend). She really liked my poster and also my menu just as Hugo.<br>
+        she did say that could add a Static navbar Instead one that stayed at the top.<br>
+        I chose not to add the static navbar because Is didn't see the value In It while<br>
+        my webside Isn't that big. Not only did I get advice from my teachers but also from my fellow students.<br>
+        A piece of really helpfull advice that I got was from a student named Lochlan<br>
+        he told me that I should probably change the color of the links<br>
+        In my website. The color of the links where previously purple but<br>
+        I changed them to dark blue sindce you could see them better that way.
+      </th>
+    </tr>
+  </table>
 </body>
 </html>
