--- a/personalswot.html
+++ b/personalswot.html
@@ -1,76 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
-    <link rel="stylesheet" href="main.css">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Welcome</title>
+  <link rel="stylesheet" href="main.css">
 </head>
+
+<!-- de dropdown menu boven aan het scherm om naar andere pagina's van mijn website te gaan. -->
 <body>
-    <div class="navbar">
-        <div class="dropdown">
-          <button class="dropbtn">Pages: 
-            <i class="fa fa-caret-down"></i>
-          </button>
-          <div class="dropdown-content">
-            <a href="index.html">Home</a>
-            <a href="profile.html">About Me</a>
-            <a href="faq.html">FAQ</a>
-            <a href="blog.html">Blog</a>
-            <a href="dashboard.html">Dashboard</a>
-          </div>
-        </div> 
-
-        <div class="dropdown">
-          <button class="dropbtnusefulltools">Useful Tools:
-            <i class="fa fa-caret-down"></i>
-          </button>
-          <div class="dropdown-usefulltools">
-            <a href="https://oer.hz.nl/6978cdea-fb31-430b-9bf9-63206aa07754">Course and Examination Regulations</a>
-            <a href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/TWE/IR-B-HBO-ICT-full-time-2023-2024-DEF.pdf">Implementation Regulations</a>
-            <a href="https://glaze-donut-5a5.notion.site/Assignment-Specification-661c5ac5d7494328a58be61d00dd41e4#e1305df5024f4fa2bab3720976a030f3">Notion</a>
-            <a href="https://hz.osiris-student.nl/voortgang">MyHZ study progress</a>
-            <a href="https://github.com/HZ-HBO-ICT">GitHub environment of the study program</a>
-          </div>
-        </div> 
+  <div class="navbar">
+    <div class="dropdown">
+      <button class="dropbtn">Pages:
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="index.html">Home</a>
+        <a href="profile.html">About Me</a>
+        <a href="faq.html">FAQ</a>
+        <a href="blog.html">Blog</a>
+        <a href="dashboard.html">Dashboard</a>
       </div>
-  
-    <table style="width:13%">
-        <tr>
-            <th class="ict"><a href="blog.html">go back to Blog Feed </a></th>
-        </tr>
-        <h1 class="swottext">Personal Swot </h1>
-      </table>  
+    </div>
 
-      <section>
-        <div class="swot-container">
-            <div class="swot-box">
-                <h2>Strengths</h2>
-                <p>I think that one of my biggest strenghts is that I can think calmly about things even in stressfull situations.
-                    that way my concluion isn't made up in a hurry and most of the times very logical. An other big strength of mine is
-                    that I am reliable when someone expects something of me. I always make sure I did what I needed to do so that it isn't 
-                    my foult when something goes wrong.
-                </p>
-            </div>
-            <div class="swot-box">
-                <h2>Weaknesses</h2>
-                <p>A big weakness of mine is independency, somethimes I count just a little bit to much on others. 
-                   in some people's point of view is that a good thing because it means that you trust others, but in my
-                   opinion it means that i am not mature enough to handle my own problems.
-                </p>
-            </div>
-            <div class="swot-box">
-                <h2>Opportunities</h2>
-                <p> I see a big opportunitie in developing and improve my coding skills at the HZ wich helps me choocing the right direction of IT.</p>
-            </div>
-            <div class="swot-box">
-                <h2>Threats</h2>
-                <p>My biggest threat is not keeping up with my projects. I often have the tendency to slack of a bit and postpone the 
-                    things i should have done wich makes me behind schedule and gets me in even deeper problems. </p>
-            </div>
-            </div>
-    </section>
+    <!-- Het dropdown menu boven aan het scherm voor de usefull tools. -->
+    <div class="dropdown">
+      <button class="dropbtnusefulltools">Usefull Tools:
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-usefulltools">
+        <a href="https://oer.hz.nl/6978cdea-fb31-430b-9bf9-63206aa07754">Course and Examination Regulations</a>
+        <a href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/TWE/IR-B-HBO-ICT-full-time-2023-2024-DEF.pdf">Implementation Regulations</a>
+        <a href="https://glaze-donut-5a5.notion.site/Assignment-Specification-661c5ac5d7494328a58be61d00dd41e4#e1305df5024f4fa2bab3720976a030f3">Notion</a>
+        <a href="https://hz.osiris-student.nl/voortgang">MyHZ study progress</a>
+        <a href="https://github.com/HZ-HBO-ICT">GitHub environment of the study program</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Mijn personal Swot in de tabel. -->
+  <table style="width:13%">
+    <tr>
+      <th class="ict"><a class="bloglink" href="blog.html"> go back to Blog Feed </a></th>
+    </tr>
+    <h1 class="swottext">Personal Swot </h1>
+  </table>
+
+  <section>
+    <div class="swot-container">
+      <div class="swot-box">
+        <h2>Strengths</h2>
+        <p>I think that one of my biggest strenghts is that I can think calmly about things even in stressfull
+          situations.
+          that way my concluion isn't made up in a hurry and most of the times very logical. An other big strength of
+          mine is
+          that I am reliable when someone expects something of me. I always make sure I did what I needed to do so that
+          it isn't
+          my foult when something goes wrong.
+        </p>
+      </div>
+      <div class="swot-box">
+        <h2>Weaknesses</h2>
+        <p>A big weakness of mine is independency, somethimes I count just a little bit to much on others.
+          in some people's point of view is that a good thing because it means that you trust others, but in my
+          opinion it means that i am not mature enough to handle my own problems.
+        </p>
+      </div>
+      <div class="swot-box">
+        <h2>Opportunities</h2>
+        <p> I see a big opportunitie in developing and improve my coding skills at the HZ wich helps me choocing the
+          right direction of IT.</p>
+      </div>
+      <div class="swot-box">
+        <h2>Threats</h2>
+        <p>My biggest threat is not keeping up with my projects. I often have the tendency to slack of a bit and
+          postpone the
+          things i should have done wich makes me behind schedule and gets me in even deeper problems. </p>
+      </div>
+    </div>
+  </section>
 
 </body>
+
 </html>
