--- a/programmingexperience.html
+++ b/programmingexperience.html
@@ -1,60 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
-    <link rel="stylesheet" href="main.css">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Welcome</title>
+  <link rel="stylesheet" href="main.css">
 </head>
+
+<!-- de dropdown menu boven aan het scherm om naar andere pagina's van mijn website te gaan. -->
 <body>
-    <div class="navbar">
-        <div class="dropdown">
-          <button class="dropbtn">Pages: 
-            <i class="fa fa-caret-down"></i>
-          </button>
-          <div class="dropdown-content">
-            <a href="index.html">Home</a>
-            <a href="profile.html">About Me</a>
-            <a href="faq.html">FAQ</a>
-            <a href="blog.html">Blog</a>
-            <a href="dashboard.html">Dashboard</a>
-          </div>
-        </div> 
-
-        <div class="dropdown">
-          <button class="dropbtnusefulltools">Useful Tools:
-            <i class="fa fa-caret-down"></i>
-          </button>
-          <div class="dropdown-usefulltools">
-            <a href="https://oer.hz.nl/6978cdea-fb31-430b-9bf9-63206aa07754">Course and Examination Regulations</a>
-            <a href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/TWE/IR-B-HBO-ICT-full-time-2023-2024-DEF.pdf">Implementation Regulations</a>
-            <a href="https://glaze-donut-5a5.notion.site/Assignment-Specification-661c5ac5d7494328a58be61d00dd41e4#e1305df5024f4fa2bab3720976a030f3">Notion</a>
-            <a href="https://hz.osiris-student.nl/voortgang">MyHZ study progress</a>
-            <a href="https://github.com/HZ-HBO-ICT">GitHub environment of the study program</a>
-          </div>
-        </div> 
+  <div class="navbar">
+    <div class="dropdown">
+      <button class="dropbtn">Pages:
+      <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="index.html">Home</a>
+        <a href="profile.html">About Me</a>
+        <a href="faq.html">FAQ</a>
+        <a href="blog.html">Blog</a>
+        <a href="dashboard.html">Dashboard</a>
       </div>
-    <h1 class="swottext"> personal experience </h1>
-    <table style="width:13%">
-        <tr>
-            <th class="ict"><a href="blog.html">go back to Blog Feed </a></th>
-        </tr>
-      </table>  
+    </div>
 
-      <table>
-        <tr>
-          <th class="faq"> There is not to much i can tell you about my previous experience with programming but i will tell you either way.
-            about one year ago i was still in my final year of my secundary school and did actually have IT classes. We started our IT classes with 
-            building our own website using notepad++, HTML and CSS. We had about 3 months to build our own webiste with topic of choice before we started
-            with phyton. We used phyton for about 2 months or so for al kinds of little assignments, secretly i hoped we would do more with Phyton but 
-            unfortunatly we never did. After Phyton we moved on to Aurdino where we had to write code for lighting up lightbulbs or making a sonar sensor using 
-            the bredboard. So thats basicly the programming ecperience that i have,just as i said it isn't anything special. My previous experience is slightly
-            giving me an advantage at the moment because we are making a website with HTML again and that is somethinig i have already done once. So basicly with 
-            this project i have a quick start but as soon as we start a new topic it is a fresh start for me.
+    <!-- Het dropdown menu boven aan het scherm voor de usefull tools. -->
+    <div class="dropdown">
+      <button class="dropbtnusefulltools">Useful Tools:
+      <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-usefulltools">
+        <a href="https://oer.hz.nl/6978cdea-fb31-430b-9bf9-63206aa07754">Course and Examination Regulations</a>
+        <a href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/TWE/IR-B-HBO-ICT-full-time-2023-2024-DEF.pdf">Implementation Regulations</a>
+        <a href="https://glaze-donut-5a5.notion.site/Assignment-Specification-661c5ac5d7494328a58be61d00dd41e4#e1305df5024f4fa2bab3720976a030f3">Notion</a>
+        <a href="https://hz.osiris-student.nl/voortgang">MyHZ study progress</a>
+        <a href="https://github.com/HZ-HBO-ICT">GitHub environment of the study program</a>
+      </div>
+    </div>
+  </div>
+  <h1 class="swottext"> personal experience </h1>
+  <table style="width:13%">
+    <tr>
+      <th class="ict"><a class="bloglink" href="blog.html">go back to Blog Feed </a></th>
+    </tr>
+  </table>
 
-            </th>
-        </tr>
-    </table>
+  <table>
+    <tr>
+      <th class="faq"> There is not to much i can tell you about my previous experience with programming but i will tell
+        you either way.
+        about one year ago i was still in my final year of my secundary school and did actually have IT classes. We
+        started our IT classes with
+        building our own website using notepad++, HTML and CSS. We had about 3 months to build our own webiste with
+        topic of choice before we started
+        with phyton. We used phyton for about 2 months or so for al kinds of little assignments, secretly i hoped we
+        would do more with Phyton but
+        unfortunatly we never did. After Phyton we moved on to Aurdino where we had to write code for lighting up
+        lightbulbs or making a sonar sensor using
+        the bredboard. So thats basicly the programming ecperience that i have,just as i said it isn't anything special.
+        My previous experience is slightly
+        giving me an advantage at the moment because we are making a website with HTML again and that is somethinig i
+        have already done once. So basicly with
+        this project i have a quick start but as soon as we start a new topic it is a fresh start for me.
+
+      </th>
+    </tr>
+  </table>
 </body>
 </html>
