--- a/dashboard.html
+++ b/dashboard.html
@@ -1,114 +1,122 @@
 <!DOCTYPE HTML>
 <html lang="en">
 
-    <!-- Connection to css. -->
-    
-<head>
+<!-- Connection to css. -->
 
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
     <link rel="stylesheet" href="main.css">
 </head>
+
+<!-- de dropdown menu boven aan het scherm om naar andere pagina's van mijn website te gaan. -->
+
 <body>
     <div class="navbar">
         <div class="dropdown">
-          <button class="dropbtn">Pages: 
+            <button class="dropbtn">Pages:
             <i class="fa fa-caret-down"></i>
-          </button>
-          <div class="dropdown-content">
-            <a href="index.html">Home</a>
-            <a href="profile.html">About Me</a>
-            <a href="faq.html">FAQ</a>
-            <a href="blog.html">Blog</a>
-            <a href="dashboard.html">Dashboard</a>
-          </div>
-        </div> 
+            </button>
+            <div class="dropdown-content">
+                <a href="index.html">Home</a>
+                <a href="profile.html">About Me</a>
+                <a href="faq.html">FAQ</a>
+                <a href="blog.html">Blog</a>
+                <a href="dashboard.html">Dashboard</a>
+            </div>
+        </div>
 
+        <!-- Het dropdown menu boven aan het scherm voor de usefull tools. -->
         <div class="dropdown">
-          <button class="dropbtnusefulltools">Useful Tools:
+            <button class="dropbtnusefulltools">Useful Tools:
             <i class="fa fa-caret-down"></i>
-          </button>
-          <div class="dropdown-usefulltools">
-            <a href="https://oer.hz.nl/6978cdea-fb31-430b-9bf9-63206aa07754">Course and Examination Regulations</a>
-            <a href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/TWE/IR-B-HBO-ICT-full-time-2023-2024-DEF.pdf">Implementation Regulations</a>
-            <a href="https://glaze-donut-5a5.notion.site/Assignment-Specification-661c5ac5d7494328a58be61d00dd41e4#e1305df5024f4fa2bab3720976a030f3">Notion</a>
-            <a href="https://hz.osiris-student.nl/voortgang">MyHZ study progress</a>
-            <a href="https://github.com/HZ-HBO-ICT">GitHub environment of the study program</a>
-          </div>
-        </div> 
-      </div>
-    <img  class="hzlogoboven" src="hzlogo.png" alt=" HZ logo"
-    width="130" 
-    height="auto">
+            </button>
+            <div class="dropdown-usefulltools">
+                <a href="https://oer.hz.nl/6978cdea-fb31-430b-9bf9-63206aa07754">Course and Examination Regulations</a>
+                <a href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/TWE/IR-B-HBO-ICT-full-time-2023-2024-DEF.pdf">Implementation Regulations</a>
+                <a href="https://glaze-donut-5a5.notion.site/Assignment-Specification-661c5ac5d7494328a58be61d00dd41e4#e1305df5024f4fa2bab3720976a030f3">Notion</a>
+                <a href="https://hz.osiris-student.nl/voortgang">MyHZ study progress</a>
+                <a href="https://github.com/HZ-HBO-ICT">GitHub environment of the study program</a>
+            </div>
+        </div>
+    </div>
+    <img class="hzlogoboven" src="hzlogo.png" alt=" HZ logo" width="130" height="auto">
 
-<h1> Dashboard </h1>
-<br>
-
- <table> 
-    <tr>
-        <th>quartre</th>
-        <th>courses </th>
-        <th>exams </th>
-        <th>ECO </th>
-        <th>Marks </th>
-    </tr>
-    <tr>
-        <th> 1 </th>
-        <th>
-            <li> PCO </li> 
-            <li> PBA </li>
-            <li> CSB </li>
-        </th>
-        <th>
-            <li> PCO: Assesment website</li>
-            <li> PBA: Case study exam</li> 
-            <li> CSB: Written exam </li>
-        </th>
-        <th>
-            <li> 2,5 EC</li> 
-            <li> 5,0 EC </li>
-            <li> 5,0 EC </li>
-        </th>
-        <th> </th>
-    </tr>
-    <tr>
-        <th> 2 </th>
-        <th>
-            <li> PPD-E </li> 
-            <li> OOP </li>
-        </th>
-        <th>
-            <li> PPD-E: PPD-E exam </li>
-            <li> OOP: OOP exam </li></th>
-        <th><li> 12,5 EC </li> 
-            <li> 10,0 EC </li></th>
-        <th></th>
-    </tr>
-    <tr>
-        <th> 3 </th>
-        <th>
-            <li> Framework Project 1</li>
-            <li> Business IT Consultancy Basics </li></th>
-        <th> Presentation (group) </th>
-        <th><li> 10 EC</li></th>
-        <th> </th>
-    </tr>
-    <tr>
-        <th> 4 </th>
-        <th>
-            <li> Framework Project 2 </li>
-            <li> Business IT Consultancy Basics </li></th>
-        <th> Portofolio </th>
-        <th><li> 10 EC</li>
-            <li> 2,5 EC</li>
-             </th>
-        <th> </th>
-    </tr>    
- </table>
- <p> Other: personality 2,5 EC</p>
- <br>
- <label for="file">Total progress:</label>
-<progress id="file" value="32" max="100"> 32% </progress>
+    <h1> Dashboard </h1>
+    <br>
+    <table>
+        <tr>
+            <th>quartre</th>
+            <th>courses </th>
+            <th>exams </th>
+            <th>ECO </th>
+            <th>Marks </th>
+        </tr>
+        <tr>
+            <th> 1 </th>
+            <th>
+                <li> PCO </li>
+                <li> PBA </li>
+                <li> CSB </li>
+            </th>
+            <th>
+                <li> PCO: Assesment website</li>
+                <li> PBA: Case study exam</li>
+                <li> CSB: Written exam </li>
+            </th>
+            <th>
+                <li> 2,5 EC</li>
+                <li> 5,0 EC </li>
+                <li> 5,0 EC </li>
+            </th>
+            <th> </th>
+        </tr>
+        <tr>
+            <th> 2 </th>
+            <th>
+                <li> PPD-E </li>
+                <li> OOP </li>
+            </th>
+            <th>
+                <li> PPD-E: PPD-E exam </li>
+                <li> OOP: OOP exam </li>
+            </th>
+            <th>
+                <li> 12,5 EC </li>
+                <li> 10,0 EC </li>
+            </th>
+            <th></th>
+        </tr>
+        <tr>
+            <th> 3 </th>
+            <th>
+                <li> Framework Project 1</li>
+                <li> Business IT Consultancy Basics </li>
+            </th>
+            <th> Presentation (group) </th>
+            <th>
+                <li> 10 EC</li>
+            </th>
+            <th> </th>
+        </tr>
+        <tr>
+            <th> 4 </th>
+            <th>
+                <li> Framework Project 2 </li>
+                <li> Business IT Consultancy Basics </li>
+            </th>
+            <th> Portofolio </th>
+            <th>
+                <li> 10 EC</li>
+                <li> 2,5 EC</li>
+            </th>
+            <th> </th>
+        </tr>
+    </table>
+    <p> Other: IT personality 2,5 EC</p>
+    <br>
+    <label for="file">Total progress:</label>
+    <progress id="file" value="32" max="100"> 32% </progress>
 </body>
 </html>
