--- a/faq.html
+++ b/faq.html
@@ -1,103 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Connection to css. -->
-
 <head>
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome</title>
   <link rel="stylesheet" href="main.css">
 </head>
+
+<!-- de dropdown menu boven aan het scherm om naar andere pagina's van mijn website te gaan. -->
 <body>
   <div class="navbar">
-      <div class="dropdown">
-        <button class="dropbtn">Pages: 
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content">
-          <a href="index.html">Home</a>
-          <a href="profile.html">About Me</a>
-          <a href="faq.html">FAQ</a>
-          <a href="blog.html">Blog</a>
-          <a href="dashboard.html">Dashboard</a>
-        </div>
-      </div> 
-
-      <div class="dropdown">
-        <button class="dropbtnusefulltools">Useful Tools:
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-usefulltools">
-          <a href="https://oer.hz.nl/6978cdea-fb31-430b-9bf9-63206aa07754">Course and Examination Regulations</a>
-          <a href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/TWE/IR-B-HBO-ICT-full-time-2023-2024-DEF.pdf">Implementation Regulations</a>
-          <a href="https://glaze-donut-5a5.notion.site/Assignment-Specification-661c5ac5d7494328a58be61d00dd41e4#e1305df5024f4fa2bab3720976a030f3">Notion</a>
-          <a href="https://hz.osiris-student.nl/voortgang">MyHZ study progress</a>
-          <a href="https://github.com/HZ-HBO-ICT">GitHub environment of the study program</a>
-        </div>
-      </div> 
+    <div class="dropdown">
+      <button class="dropbtn">Pages:
+      <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="index.html">Home</a>
+        <a href="profile.html">About Me</a>
+        <a href="faq.html">FAQ</a>
+        <a href="blog.html">Blog</a>
+        <a href="dashboard.html">Dashboard</a>
+      </div>
     </div>
-  <!-- FAQ questions and answers. -->
+
+    <!-- Het dropdown menu boven aan het scherm voor de usefull tools. -->
+    <div class="dropdown">
+      <button class="dropbtnusefulltools">Useful Tools:
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-usefulltools">
+        <a href="https://oer.hz.nl/6978cdea-fb31-430b-9bf9-63206aa07754">Course and Examination Regulations</a>
+        <a href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/TWE/IR-B-HBO-ICT-full-time-2023-2024-DEF.pdf">Implementation Regulations</a>
+        <a href="https://glaze-donut-5a5.notion.site/Assignment-Specification-661c5ac5d7494328a58be61d00dd41e4#e1305df5024f4fa2bab3720976a030f3">Notion</a>
+        <a href="https://hz.osiris-student.nl/voortgang">MyHZ study progress</a>
+        <a href="https://github.com/HZ-HBO-ICT">GitHub environment of the study program</a>
+      </div>
+    </div>
+  </div>
+  
   <h1> FAQ</h1>
   <h2> Most asked questions: </h2>
-    <table>
+  <table>
     <tr>
-      <th class="faq"> <details>
-        <summary> How can you print a document from your laptop at HZ? </summary>
-          step 1: go to <a href="https://hz.mynetpay.nl/Login">https://mynetpay.nl/ </a> or scan the QR-code in the printer
+      <th class="faq">
+        <details>
+          <summary> How can you print a document from your laptop at HZ? </summary>
+          step 1: go to <a class="link" href="https://hz.mynetpay.nl/Login">https://mynetpay.nl/ </a> or scan the
+          QR-code in the printer
           room. <br>
           step 2: click on 'mobility print'. <br>
-          step 3: choose your operatating system and follow the instructions. </details></th>
+          step 3: choose your operatating system and follow the instructions.
+        </details>
+      </th>
     </tr>
     <tr>
-      <th class="faq"> <details>
-        <summary> How can you scan a document and send it to your laptop at HZ? </summary>
+
+      <th class="faq">
+        <details>
+          <summary> How can you scan a document and send it to your laptop at HZ? </summary>
           step 1: swipe your studentcard <br>
           step 2: open te printer and place your paper against the Arrow in the corner <br>
           step 3 close the printer and chooce a subject for your scan <br>
-          step 4: press start and log-out. </details></th>
+          step 4: press start and log-out.
+        </details>
+      </th>
     </tr>
 
     <tr>
-      <th class="faq"><details>
-          <summary> How can I buy something (like when I sign up for the IT introduction event) on the HZ web shop? </summary>
-          step 1: go to the <a
-              href="https://webshop.hz.nl/WebshopApp/default.aspx?menu=082076044027019251066025111065201099237062130097">hz
-              webshop page </a> <br>
-            step 2: click on the products you would like to order. <br>
-            step 3: make sure you have the right amount of product you like to order. <br>
-            step 4: locate your shopping cart <br>
-            step 5: order your products
+      <th class="faq">
+        <details>
+          <summary> How can I buy something (like when I sign up for the IT introduction event) on the HZ web shop?
+          </summary>
+          step 1: go to the <a class="link"
+            href="https://webshop.hz.nl/WebshopApp/default.aspx?menu=082076044027019251066025111065201099237062130097">hz
+            webshop page </a> <br>
+          step 2: click on the products you would like to order. <br>
+          step 3: make sure you have the right amount of product you like to order. <br>
+          step 4: locate your shopping cart <br>
+          step 5: order your products
         </details>
       </th>
     </tr>
     <tr>
-                      
-      <th class="faq"> <details>
+
+      <th class="faq">
+        <details>
           <summary> What are the instructions if you want to park your car at the HZ parking lot? </summary>
-            step 1: park your vehicle at the parking lot "kousteensedijk" <br>
-            step 2: walk to the hz building and follow your lessons <br>
-            step 3: ask for an exit ticket at the joint research centre counter when you are want to go home. <br>
-            step 4: walk to your car and drive away 
+          step 1: park your vehicle at the parking lot "kousteensedijk" <br>
+          step 2: walk to the hz building and follow your lessons <br>
+          step 3: ask for an exit ticket at the joint research centre counter when you are want to go home. <br>
+          step 4: walk to your car and drive away
         </details>
       </th>
     </tr>
     <tr>
-      
-<th class="faq"> <details>
-<summary> How can you book a project space? </summary>
-  step 1: go to HZ.Portal <br>
-  step 2: Go to the home page of the Self Service Portal<br>
-  step 3: Click on Reserve<br>
-  step 4: Choose the correct category and search for the "resource" you want to reserve. If necessary, use the Type filter to turn certain items on/off in the overview.<br>
-  step 5: Select the day when the resource is borrowed<br>
-  step 6: Indicate, by dragging with the left mouse button, the time period when the resource is borrowed<br>
-  step 7: Click on Next<br>
-  step 8: Read the loan conditions, check the reservation and click on Next<br>
-  step 9: Fill in the necessary information and click on Confirm reservation </details>
-</th>
-</tr>
-</table>
+
+      <th class="faq">
+        <details>
+          <summary> How can you book a project space? </summary>
+          step 1: go to HZ.Portal <br>
+          step 2: Go to the home page of the Self Service Portal<br>
+          step 3: Click on Reserve<br>
+          step 4: Choose the correct category and search for the "resource" you want to reserve. If necessary, use the
+          Type filter to turn certain items on/off in the overview.<br>
+          step 5: Select the day when the resource is borrowed<br>
+          step 6: Indicate, by dragging with the left mouse button, the time period when the resource is borrowed<br>
+          step 7: Click on Next<br>
+          step 8: Read the loan conditions, check the reservation and click on Next<br>
+          step 9: Fill in the necessary information and click on Confirm reservation
+        </details>
+      </th>
+    </tr>
+  </table>
 </body>
 </html>
