--- a/profile.html
+++ b/profile.html
@@ -1,66 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- Connection to css and document name -->
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Welcome</title>
+  <link rel="stylesheet" href="main.css">
+</head>
 
-                            <!-- Connection to css and document name -->
-                            <head>
+<!-- de dropdown menu boven aan het scherm om naar andere pagina's van mijn website te gaan. -->
+<body>
+  <div class="navbar">
+    <div class="dropdown">
+      <button class="dropbtn">Pages:
+      <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="index.html">Home</a>
+        <a href="profile.html">About Me</a>
+        <a href="faq.html">FAQ</a>
+        <a href="blog.html">Blog</a>
+        <a href="dashboard.html">Dashboard</a>
+      </div>
+    </div>
 
-                              <meta charset="UTF-8">
-                              <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                              <title>Welcome</title>
-                              <link rel="stylesheet" href="main.css">
-                          </head>
-                          <body>
-                              <div class="navbar">
-                                  <div class="dropdown">
-                                    <button class="dropbtn">Pages: 
-                                      <i class="fa fa-caret-down"></i>
-                                    </button>
-                                    <div class="dropdown-content">
-                                      <a href="index.html">Home</a>
-                                      <a href="profile.html">About Me</a>
-                                      <a href="faq.html">FAQ</a>
-                                      <a href="blog.html">Blog</a>
-                                      <a href="dashboard.html">Dashboard</a>
-                                    </div>
-                                  </div> 
-                          
-                                  <div class="dropdown">
-                                    <button class="dropbtnusefulltools">Useful Tools:
-                                      <i class="fa fa-caret-down"></i>
-                                    </button>
-                                    <div class="dropdown-usefulltools">
-                                      <a href="https://oer.hz.nl/6978cdea-fb31-430b-9bf9-63206aa07754">Course and Examination Regulations</a>
-                                      <a href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/TWE/IR-B-HBO-ICT-full-time-2023-2024-DEF.pdf">Implementation Regulations</a>
-                                      <a href="https://glaze-donut-5a5.notion.site/Assignment-Specification-661c5ac5d7494328a58be61d00dd41e4#e1305df5024f4fa2bab3720976a030f3">Notion</a>
-                                      <a href="https://hz.osiris-student.nl/voortgang">MyHZ study progress</a>
-                                      <a href="https://github.com/HZ-HBO-ICT">GitHub environment of the study program</a>
-                                    </div>
-                                  </div> 
-                                </div>
-    <img  class="hzlogoboven" src="hzlogo.png" alt=" HZ logo"
-    width="130" 
-    height="auto">
+    <!-- Het dropdown menu boven aan het scherm voor de usefull tools. -->
+    <div class="dropdown">
+      <button class="dropbtnusefulltools">Useful Tools:
+      <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-usefulltools">
+        <a href="https://oer.hz.nl/6978cdea-fb31-430b-9bf9-63206aa07754">Course and Examination Regulations</a>
+        <a href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/TWE/IR-B-HBO-ICT-full-time-2023-2024-DEF.pdf">Implementation Regulations</a>
+        <a href="https://glaze-donut-5a5.notion.site/Assignment-Specification-661c5ac5d7494328a58be61d00dd41e4#e1305df5024f4fa2bab3720976a030f3">Notion</a>
+        <a href="https://hz.osiris-student.nl/voortgang">MyHZ study progress</a>
+        <a href="https://github.com/HZ-HBO-ICT">GitHub environment of the study program</a>
+      </div>
+    </div>
+  </div>
+  <img class="hzlogoboven" src="hzlogo.png" alt=" HZ logo" width="130" height="auto">
 
-                      <!-- Text about myselve, my familie and my hobbies. -->
+  <!-- Text about myselve, my familie and my hobbies. -->
   <h1>About Me</h1>
-   <p> Hello my name is Quinn, I am currently 19 years old and I live in The Netherlands.<br>
-   I am a habitant of the city called 'Goes', and I live there with my father, mother and my little brother. I also
+  <p> Hello my name is Quinn, I am currently 19 years old and I live in The Netherlands.<br>
+    I am a habitant of the city called 'Goes', and I live there with my father, mother and my little brother. I also
     have an older sister, but she lives by herself. <br>
-  I am currently studying IT at the 'Hogeschool Zeeland'. We are now one week into the course <br>
-   and what i can tell you about the study is that it is very difficult but, fun and challenging to do.</p>
+    I am currently studying IT at the 'Hogeschool Zeeland'. We are now one week into the course <br>
+    and what i can tell you about the study is that it is very difficult but, fun and challenging to do.</p>
   <br>
   <p>I have a lot of hobbies that I like to do. Some of them I can only do in the summer, like skateboarding for
     example. <br>
-   Some other hobbies I like to do are: listen to, making and playing music, skateboarding, drawing, gymnastics and
+    Some other hobbies I like to do are: listen to, making and playing music, skateboarding, drawing, gymnastics and
     gaming. <br>
     I did gymnastics for about 12 years now, but I recently stopped because I didnt have fun anymore. <br>
-  In my whole lifetime I won a lot of tournaments, I even became 5 time national champion in a row. <br>
-  Another big hobby of mine is music, from when I was little I was always busy with music. When I was 10 I started
-  <br>
-   my first guitar lessons. It was fun for a while, but I mostly play the piano now. If you have any other questions
+    In my whole lifetime I won a lot of tournaments, I even became 5 time national champion in a row. <br>
+    Another big hobby of mine is music, from when I was little I was always busy with music. When I was 10 I started
+    <br>
+    my first guitar lessons. It was fun for a while, but I mostly play the piano now. If you have any other questions
     about me <br>
-   feel free to e-mail me at <a href="mailto:munc0017@hz.nl"> <b> munc0017@hz.nl </b> </a> </p> <br>
+    feel free to e-mail me at <a href="mailto:munc0017@hz.nl"> <b> munc0017@hz.nl </b> </a>
+  </p> <br>
   <br>
 
   <table>
@@ -68,9 +68,7 @@
       <th>summary</th>
       <th>contact info</th>
     </tr>
-
     <tr>
-
       <td>
         <ul>
           <li>Quinn</li>
@@ -81,26 +79,29 @@
         </ul>
       </td>
 
-                             <!-- This is the code for my socials. -->
+      <!-- This is the code for my socials. -->
       <td>
         <ul>
-          <li><a href="mailto:munc0017@hz.nl">E-mail</a></li>
-          <li><a href="https://www.instagram.com/quinnemans052019/">instagram</a></li>
+          <li>
+            <a class="link" href="mailto:munc0017@hz.nl">E-mail</a>
+          </li>
+          <li>
+            <a class="link" href="https://www.instagram.com/quinnemans052019/">instagram </a>
+          </li>
           <li> Snapchat: quinnemans14</li>
-          <li><a href="https://github.com/quinnemans/quinnemans.github.io"> My github page </a> </li>
+          <li>
+            <a class="link" href="https://github.com/quinnemans/quinnemans.github.io"> My github page </a>
+          </li>
         </ul>
       </td>
     </tr>
   </table>
-<br>
-<br>
-<br>
-<br>
-<br>
-  <img class="pfp" src="pfp.jpg" alt="profile picture"
-  width="100"
-  height="100">
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <img class="pfp" src="pfp.jpg" alt="profile picture" width="100" height="100">
   <p>Creator: Quinn de Munck</p>
 </body>
-
 </html>
